added able to choose path to new level when hosting session

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4CF912A0473CEF4BDD0DF3BAA92317BC
 ProjectName=Third Person Game Template
+
+[/Script/Engine.GameSession]
+MaxPlayers=100
